--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ img {
 /* header  */
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container{
     display: flex;
@@ -100,13 +101,37 @@ img {
         color: #2E2F42;
         padding: 24px 0;
         display: block;
+        position: relative;
+        
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
 }
-.header-list-item:hover{        
-    color:#404BBF
+
+    
+    
+.header-list-item::after{
+    position: absolute;
+content: '';
+left:0;
+bottom: -1px;
+border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
-.header-list-item:focus{
-    color: #404bbf
+.header-list-item:hover::after, .header-list-item:focus::after, .header-list-item.current::after{   
+    opacity: 1;
+    
+    
+    
 }
+.header-list-item:hover, .header-list-item:focus, .header-list-item.current{
+    color: #404BBF;
+}
+
 .header-address-container{
 
 }
@@ -119,7 +144,7 @@ img {
 .header-address-list{
     display: flex;
     gap:40px;
-   
+    
     
 }
 .header-address-list li a {
@@ -128,6 +153,8 @@ img {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color:#434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
         
 }
 .header-address-list li a:hover{
@@ -155,8 +182,19 @@ img {
 /* Hero banner section */
 .hero-banner {
     background-color: #2E2F42;
-    max-width: 100%;
+    width: 1440px;
+    margin: 0 auto;
     padding: 188px 0;
+    background-image: linear-gradient(to bottom,
+    rgba(46, 47,66,
+        0.7),
+        rgba(46,47,
+            66,
+            0.7)),
+    url(../images/people-office.jpg);
+    background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
 }
 
 .hero-banner-text {
@@ -186,6 +224,7 @@ img {
         display: block;
         margin: 0 auto;
         border-radius: 4px; 
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-baner-button:hover{
     background-color: #404BBF;
@@ -206,6 +245,17 @@ img {
 
 .benefits-list-item {
     width: calc((100% - 72px) / 4);
+}
+.benefits-list-icon{
+    border: 1px solid #8E8F99;
+        border-radius: 4px;
+        width: 264px;
+        height: 112px;
+        background-color: #F4F4FD;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 8px;
 }
 
 .benefits-list-item-head {
@@ -245,11 +295,13 @@ img {
     gap: 24px;
     justify-content: center;
     
+    
 }
 
 .team-list-item {background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .team-list-name{
     padding: 32px 0;
@@ -271,10 +323,40 @@ img {
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        margin-bottom: 8px;
+}
+.team-icon-border{
+    width: 40px;
+        height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+.team-icon-border:hover{
+    background-color:#404BBF;
+}
+.team-list-icon{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+        
+}
+.team-icon{
+    
+    
+    
+       
+    
 }
 /* our portfolio saction */
 .porfolio {
-    padding: 120px 0 120px 0
+    padding: 120px 0 120px 0;
+    
 }
 
 .porfolio-head {
@@ -298,7 +380,39 @@ img {
 }
 
 .porfolio-list-item {
-    width: calc((100% - 48px) / 3)
+    width: calc((100% - 48px) / 3);
+
+}
+/* .porfolio-list-item:hover .overlay {
+    transform: translateY(0);
+} */
+.table{
+position: relative;
+overflow: hidden;
+
+}
+.overlay{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: #4D5AE5;
+transform: translateY(100%);
+transition: transform 250ms ease-in-out;
+}
+.overlay-text{
+    margin: 40px 32px 0px 32px;
+    font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #F4F4FD;
+        
+}
+.porfolio-name:hover .overlay{
+    transform: translateY(0); 
+    /* НЕ РАБОТАЕТ */
 }
 .porfolio-name{
     padding: 32px 16px;
@@ -366,3 +480,6 @@ img {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden; }
+        .social-icons {
+            stroke: #111111;
+            fill: transparent;   }
