--- a/css/style.css
+++ b/css/style.css
@@ -383,9 +383,9 @@ border-radius: 2px;
     width: calc((100% - 48px) / 3);
 
 }
-/* .porfolio-list-item:hover .overlay {
+.porfolio-list-item:hover .overlay {
     transform: translateY(0);
-} */
+}
 .table{
 position: relative;
 overflow: hidden;
@@ -411,8 +411,6 @@ transition: transform 250ms ease-in-out;
         
 }
 .porfolio-name:hover .overlay{
-    transform: translateY(0); 
-    /* НЕ РАБОТАЕТ */
 }
 .porfolio-name{
     padding: 32px 16px;
@@ -441,6 +439,15 @@ transition: transform 250ms ease-in-out;
 .footer{
     background-color: #2E2F42;
     padding: 100px 0;
+    
+    
+}
+.footer-container{
+    display: flex;
+    gap:120px;
+}
+.footer-logo-container{
+
 }
 .footer-logo {
     display: inline-block;
@@ -468,6 +475,46 @@ transition: transform 250ms ease-in-out;
     color: #F4F4FD;
     
 } 
+.social-media{
+    width: 208px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.social-media-text{
+    font-weight: 500;
+        font-size: 16px;      
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: white;
+margin:0;
+margin-bottom: 16px;
+}
+.footer-list-icon{
+    width: 208px;
+        height: 40px;
+    display: flex;
+        gap: 16px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 32px
+}
+.footer-icon-border{
+width: 40px;
+height: 40px;
+background-color: #4D5AE5;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-icon-border:hover{
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #31D0AA;
+}
+
+
 .visually-hidden {
     position: absolute;
     width: 1px;
