added shadow on hover in potfolio section

--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,7 @@ border-radius: 2px;
     margin: 0 auto;
     padding: 188px 0;
     background-image: linear-gradient(to bottom,
-    rgba(46, 47,66,
-        0.7),
+    rgba(46, 47, 66, 0.7),
         rgba(46,47,
             66,
             0.7)),
@@ -381,10 +380,16 @@ border-radius: 2px;
 
 .porfolio-list-item {
     width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .porfolio-list-item:hover .overlay {
     transform: translateY(0);
+    
+}
+.porfolio-list-item:hover{
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    
 }
 .table{
 position: relative;
