--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ border-radius: 2px;
 /* Hero banner section */
 .hero-banner {
     background-color: #2E2F42;
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
     padding: 188px 0;
     background-image: linear-gradient(to bottom,
@@ -335,7 +335,7 @@ border-radius: 2px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
-.team-icon-border:hover{
+.team-icon-border:hover, .team-icon-border:focus{
     background-color:#404BBF;
 }
 .team-list-icon{
@@ -346,7 +346,7 @@ border-radius: 2px;
         
 }
 .team-icon{
-    
+    fill:#f4f4fd
     
     
        
@@ -383,8 +383,8 @@ border-radius: 2px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.porfolio-list-item:hover .overlay {
-    transform: translateY(0);
+.porfolio-list-item:hover .overlay-text {
+    transform: translateY(0%);
     
 }
 .porfolio-list-item:hover{
@@ -396,18 +396,19 @@ position: relative;
 overflow: hidden;
 
 }
-.overlay{
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-background-color: #4D5AE5;
-transform: translateY(100%);
-transition: transform 250ms ease-in-out;
-}
+
+
 .overlay-text{
-    margin: 40px 32px 0px 32px;
+    position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #4D5AE5;
+        transform: translateY(100%);
+        transition: transform 250ms ease-in-out;
+    padding: 40px 32px 0px 32px;
+    margin: 0;
     font-weight: 400;
         font-size: 16px;
         line-height: 1.5;
@@ -415,7 +416,7 @@ transition: transform 250ms ease-in-out;
         color: #F4F4FD;
         
 }
-.porfolio-name:hover .overlay{
+.porfolio-name:hover .overlay-text{
 }
 .porfolio-name{
     padding: 32px 16px;
@@ -449,10 +450,11 @@ transition: transform 250ms ease-in-out;
 }
 .footer-container{
     display: flex;
-    gap:120px;
+    align-items: baseline;
+    
 }
 .footer-logo-container{
-
+    margin-right: 120px
 }
 .footer-logo {
     display: inline-block;
@@ -514,11 +516,13 @@ align-items: center;
 
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-icon-border:hover{
+.footer-icon-border:hover, .footer-icon-border:focus{
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #31D0AA;
 }
-
+.footer-icon{
+    fill:#f4f4fd;
+}
 
 .visually-hidden {
     position: absolute;
