--- a/css/style.css
+++ b/css/style.css
@@ -406,8 +406,8 @@ overflow: hidden;
         height: 100%;
         background-color: #4D5AE5;
         transform: translateY(100%);
-        transition: transform 250ms ease-in-out;
-    padding: 40px 32px 0px 32px;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px 32px;
     margin: 0;
     font-weight: 400;
         font-size: 16px;
